<resources>
    <string name="app_name">Quizza</string>
    <string name="bottombar_battle">Battle</string>
    <string name="bottombar_create">Create</string>
    <string name="bottombar_profile">Profile</string>
    <string name="data_load_fail">Failed to load data from server</string>
    <string name="data_save_fail">Failed to save data to server</string>
    <string name="data_save_success">Successfully saved data to server</string>
    <string name="quiz_detail_battle">Battle!</string>
    <string name="app_logo_content_description">App Logo</string>
    <string name="create_no_existing_quizzes">You have no existing quizzes.</string>
    <string name="create_no_existing_quizzes_create_button">Create a new Quiz?</string>
    <string name="create_no_existing_questions">This quiz has no questions.</string>
    <string name="create_no_existing_questions_create_button">Create a question?</string>
    <string name="create_question_title">Create Question</string>
    <string name="answer_check_correct_tooltip">Mark answer as correct</string>
    <string name="answer_delete_description">Delete answer</string>
    <string name="delete_question_confirm">Are you sure you want to delete this question?</string>
    <string name="delete_question_confirm_title">Delete Question</string>
    <string name="delete_question_delete_button">Delete</string>
    <string name="delete_question_cancel_button">Cancel</string>
    <string name="quiz_edit_toolbar_save_text">Save</string>
    <string name="quiz_edit_toolbar_publish_text">Publish</string>
    <string name="google_client_id">923132938234-j3jeugok4jnc9m05toufduphd98i87jj.apps.googleusercontent.com</string>
    <string name="server_client_id">923132938234-d940agtrj3l6hr2esg3hqd77dp2p5j5r.apps.googleusercontent.com</string>
    <string name="error_username_or_password_incorrect">The username or password did was incorrect.</string>
    <string name="error_username_invalid">The username specified is invalid. Usernames must be between 5 and 18 characters long.</string>
    <string name="error_username_taken">The given username is already registered.</string>
    <string name="error_password_invalid">The password specified is invalid. Passwords must be 6 characters long.</string>
    <string name="error_network">An error occurred while communicating with the server.</string>
    <string name="error_server">A server-side error occurred. Try again later.</string>
    <string name="error_unknown">An unknown error occurred</string>
    <string name="edit_quiz_publish_title">Publish Quiz</string>
    <string name="edit_quiz_publish_warning">Are you sure you want to publish this quiz publicly?</string>
    <string name="edit_quiz_publish_confirm_text">Publish Quiz</string>
    <string name="edit_quiz_publish_cancel_text">Cancel</string>
    <string name="create_quiz_edit_quiz_button_text">Edit Quiz</string>
    <string name="create_quiz_delete_quiz_button_text">Delete quiz</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_login_text">Login</string>
    <string name="login_button_register_text">Register</string>
    <string name="login_or_separator">OR</string>
    <string name="edit_answer_hint">Answer</string>
    <string name="edit_quiz_create_answer_text">Add Answer</string>
    <string name="edit_quiz_delete_question_text">Delete Question</string>
    <string name="edit_quiz_question_hint">Question</string>
    <string name="edit_quiz_title_hint">Quiz Title</string>
    <string name="create_quiz_draft">Draft</string>
    <string name="create_quiz_published">Published</string>
    <string name="game_position">%1$d / %2$d</string>
    <string name="game_stats_correct_fraction_text">%1$d / %2$d</string>
    <string name="game_stats_correct_percentage_text">%.2f%%</string>
    <string name="delete_quiz_confirmm">Are you sure you want to delete this quiz?</string>
    <string name="delete_quiz_title">Delete Quiz</string>
    <string name="report_bug">Report a Bug</string>
    <string name="game_mode_online_description">Perfect for learning a topic with a friend. This mode creates a competitive atmosphere that is beneficial to learning.</string>
    <string name="game_mode_online_title">Play 1v1 Online</string>
    <string name="game_mode_offline_description">Perfect for initially learning a topic. This mode is helpful for gaining a deeper understanding of the material present in this quiz.</string>
    <string name="game_mode_offline_title">Individual Study</string>
    <string name="waiting_for_players">Waiting for players</string>
    <string name="offline_quiz">Offline Quiz</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="offline_user_name">Offline User</string>
    <plurals name="contains_x_questions">
        <item quantity="one">Contains %d question</item>
        <item quantity="other">Contains %d questions</item>
    </plurals>
    <plurals name="contains_x_answers">
        <item quantity="one">Contains %d answer</item>
        <item quantity="other">Contains %d answers</item>
    </plurals>
</resources>
